CR-2009-03-13-0: Bugfix:     fixed wrong timing in was_job_running()
                 Belongs To: CR-2009-03-12-0
                 Review:     ??

MG-2009-03-12-0: Bugfix:     file_permission_test adjusted for hedeby issue 584
                             fix for more than one reporter file
                 Review:     MB

CR-2009-03-12-2: Bugfix:     fixed new verified test "project_access_lists"
                             for ge versions >= 62
                 Review:     MD

CR-2009-03-12-1: Cleanup:    removed "antique" global sge_config variable
                             and re-adjusted locations where it was used
                 Review:     AA

CR-2009-03-12-0: Cleanup:    cleanup of misc. testsuite tests and procedures
                 Review:     DG

RH-2009-03-11-0: Bugfix:     get_spooled_jobs used wrong qmaster_spool_dir if
                             different spooling method for multiple clusters 
                             were used
                 Review:     CR

RH-2009-03-09-0: Bugfix:     Hedeby: CS port for dummy execution env must not 
                             be hard coded
                 Issue:      Hedeby 261
                 Review:     AF

CR-2009-03-05-2: Bugfix:     fixed cleanup procedure of test "share_tree"
                 Review:     RD

CR-2009-03-05-1: Bugfix:     fixed scheduler reconnect test for 61 versions
                 Review:     MD

CR-2009-03-05-0: Bugfix:     o wait_for_end_of_all_jobs():
                               Wait until all jobs disappeared from spooling
                               framework before returning
                             o new procedure: get_spooled_jobs()
                               Return currently spooled jobs (via spooling
                               framework)
                             o analyze_directory_structure(): 
                               last parameter is now optional
                             o fixed bug in scripts/analyze_dir.sh: