@@ -1,3 +1,6 @@
+DG-2009-03-13-0: Enhancem.:  Added test for issue 2952
+                 Review:     JG
+
 CR-2009-03-13-0: Bugfix:     fixed wrong timing in was_job_running()
                  Belongs To: CR-2009-03-12-0
                  Review:     ??
